// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`basic > parse 1`] = `
Root {
  "children": [
    Macro {
      "arguments": [
        NumberLiteral {
          "offset": 9,
          "type": "number",
          "value": "0xA00000",
        },
      ],
      "name": Identifier {
        "offset": 1,
        "type": "identifier",
        "value": "dynamic",
      },
      "offset": 0,
      "type": "macro",
    },
    Macro {
      "arguments": [
        Dynamic {
          "name": Identifier {
            "offset": 25,
            "type": "identifier",
            "value": "1",
          },
          "offset": 24,
          "type": "dynamic",
        },
      ],
      "name": Identifier {
        "offset": 20,
        "type": "identifier",
        "value": "org",
      },
      "offset": 19,
      "type": "macro",
    },
    Command {
      "arguments": [
        Dynamic {
          "name": Identifier {
            "offset": 35,
            "type": "identifier",
            "value": "2",
          },
          "offset": 34,
          "type": "dynamic",
        },
        Identifier {
          "offset": 37,
          "type": "identifier",
          "value": "MSG_FACE",
        },
      ],
      "name": Identifier {
        "offset": 27,
        "type": "identifier",
        "value": "msgbox",
      },
      "offset": 27,
      "type": "command",
    },
    Command {
      "arguments": [],
      "name": Identifier {
        "offset": 46,
        "type": "identifier",
        "value": "end",
      },
      "offset": 46,
      "type": "command",
    },
    Macro {
      "arguments": [
        Dynamic {
          "name": Identifier {
            "offset": 57,
            "type": "identifier",
            "value": "2",
          },
          "offset": 56,
          "type": "dynamic",
        },
      ],
      "name": Identifier {
        "offset": 52,
        "type": "identifier",
        "value": "org",
      },
      "offset": 51,
      "type": "macro",
    },
    Command {
      "arguments": [
        StringLiternal {
          "offset": 61,
          "type": "string",
          "value": ""你自己魔怔吧，我要去二次元了。"",
        },
      ],
      "name": Identifier {
        "offset": 59,
        "type": "identifier",
        "value": "=",
      },
      "offset": 59,
      "type": "command",
    },
  ],
  "offset": 0,
  "text": "#dynamic 0xA00000

#org @1
msgbox @2 MSG_FACE
end

#org @2
= "你自己魔怔吧，我要去二次元了。"",
  "type": "root",
}
`;

exports[`basic > tokenize 1`] = `
[
  {
    "offset": 0,
    "type": "hash",
    "value": "#",
  },
  {
    "offset": 1,
    "type": "identifier",
    "value": "dynamic",
  },
  {
    "offset": 9,
    "type": "number",
    "value": "0xA00000",
  },
  {
    "offset": 19,
    "type": "hash",
    "value": "#",
  },
  {
    "offset": 20,
    "type": "identifier",
    "value": "org",
  },
  {
    "offset": 24,
    "type": "at",
    "value": "@",
  },
  {
    "offset": 25,
    "type": "number",
    "value": "1",
  },
  {
    "offset": 27,
    "type": "identifier",
    "value": "msgbox",
  },
  {
    "offset": 34,
    "type": "at",
    "value": "@",
  },
  {
    "offset": 35,
    "type": "number",
    "value": "2",
  },
  {
    "offset": 37,
    "type": "identifier",
    "value": "MSG_FACE",
  },
  {
    "offset": 46,
    "type": "identifier",
    "value": "end",
  },
  {
    "offset": 51,
    "type": "hash",
    "value": "#",
  },
  {
    "offset": 52,
    "type": "identifier",
    "value": "org",
  },
  {
    "offset": 56,
    "type": "at",
    "value": "@",
  },
  {
    "offset": 57,
    "type": "number",
    "value": "2",
  },
  {
    "offset": 59,
    "type": "equal",
    "value": "=",
  },
  {
    "offset": 61,
    "type": "string",
    "value": ""你自己魔怔吧，我要去二次元了。"",
  },
]
`;

exports[`basic > transform 1`] = `
{
  "children": [
    Macro {
      "arguments": [
        NumberLiteral {
          "offset": 9,
          "type": "number",
          "value": "0xA00000",
        },
      ],
      "name": Identifier {
        "offset": 1,
        "type": "identifier",
        "value": "dynamic",
      },
      "offset": 0,
      "type": "macro",
    },
    Block {
      "children": [
        Command {
          "arguments": [
            Dynamic {
              "name": Identifier {
                "offset": 35,
                "type": "identifier",
                "value": "2",
              },
              "offset": 34,
              "type": "dynamic",
            },
            Identifier {
              "offset": 37,
              "type": "identifier",
              "value": "MSG_FACE",
            },
          ],
          "name": Identifier {
            "offset": 27,
            "type": "identifier",
            "value": "msgbox",
          },
          "offset": 27,
          "type": "command",
        },
        Command {
          "arguments": [],
          "name": Identifier {
            "offset": 46,
            "type": "identifier",
            "value": "end",
          },
          "offset": 46,
          "type": "command",
        },
      ],
      "label": Macro {
        "arguments": [
          Dynamic {
            "name": Identifier {
              "offset": 25,
              "type": "identifier",
              "value": "1",
            },
            "offset": 24,
            "type": "dynamic",
          },
        ],
        "name": Identifier {
          "offset": 20,
          "type": "identifier",
          "value": "org",
        },
        "offset": 19,
        "type": "macro",
      },
      "offset": 19,
      "type": "block",
    },
    Block {
      "children": [
        Command {
          "arguments": [
            StringLiternal {
              "offset": 61,
              "type": "string",
              "value": ""你自己魔怔吧，我要去二次元了。"",
            },
          ],
          "name": Identifier {
            "offset": 59,
            "type": "identifier",
            "value": "=",
          },
          "offset": 59,
          "type": "command",
        },
      ],
      "label": Macro {
        "arguments": [
          Dynamic {
            "name": Identifier {
              "offset": 57,
              "type": "identifier",
              "value": "2",
            },
            "offset": 56,
            "type": "dynamic",
          },
        ],
        "name": Identifier {
          "offset": 52,
          "type": "identifier",
          "value": "org",
        },
        "offset": 51,
        "type": "macro",
      },
      "offset": 51,
      "type": "block",
    },
  ],
  "dynamic": {
    "defines": [
      Dynamic {
        "name": Identifier {
          "offset": 25,
          "type": "identifier",
          "value": "1",
        },
        "offset": 24,
        "type": "dynamic",
      },
      Dynamic {
        "name": Identifier {
          "offset": 57,
          "type": "identifier",
          "value": "2",
        },
        "offset": 56,
        "type": "dynamic",
      },
    ],
    "references": [
      Dynamic {
        "name": Identifier {
          "offset": 35,
          "type": "identifier",
          "value": "2",
        },
        "offset": 34,
        "type": "dynamic",
      },
    ],
  },
}
`;
